ready for career fair maybe

--- a/about-me.html
+++ b/about-me.html
@@ -1,5 +1,3 @@
-<!-- about me page -->
-
 <!DOCTYPE html>
 <html lang='en'>
     <head>
@@ -16,23 +14,18 @@
                 </ul>
               </nav>
         </header>
-
-
-
         <div class="container-1-about-me">
-
+            <div class="text-1-about-me">Next year, I plan on attending USI and majoring in Computer Science. This year, I am looking forward to aquiring an internship to get started in the workplace and learn more skills.</div>
         </div>
-
-
-
-
-
+        <div class="container-2-about-me">
+            <div class="text-2-about-me">
+                <a href="https://github.com/tytichenor/projectShowcase#readme">README<img src="content/forward-arrow.png" height="30" width="30"></a><br>
+            </div>
+        </div>
         <footer class="footer">
             Ty Tichenor &copy; <div class="footer-link"><a href="mailto:tjtichenor14@gmail.com">tjtichenor14@gmail.com</a></div>
             <div class="footer-link"><a href="https://sictc.evscschools.com/">Southern Indiana Career & Technical Center</a></div><br>
             <img src="content/logo2.png" height="100" width="100"><br>
         </footer>
-  
-            <script src="index.js"></script>
       </body>
 </html>
