--- a/project-picker.html
+++ b/project-picker.html
@@ -1,9 +1,7 @@
-<!-- project picker page -->
-
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>Project Picker</title>
+        <title>Projects</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -16,35 +14,65 @@
                 </ul>
               </nav>
         </header>
-
         <div class="container-1-project-picker">
             <div class="text-1-project-picker">projects</div>
         </div>
-
         <div class="container-2-project-picker">
-            <div class="wrapper">
-                <div class="sliding-background"></div>
-              </div>
-        </div>
-
-        <div class="container-3-project-picker">
-            <div class="text-2-project-picker">
-                <a href="https://github.com/tytichenor/Finished-Projects/tree/main/Finished-Intersection">Intersection<img src="content/forward-arrow.png" height="30" width="30"></a><br>
-                <a href="https://github.com/tytichenor/Finished-Projects/tree/main/Finished-JavaJam">JavaJam<img src="content/forward-arrow.png" height="30" width="30"></a><br>
-                <a href="https://github.com/tytichenor/Finished-Projects/tree/main/Finished-Vending">Vending<img src="content/forward-arrow.png" height="30" width="30"></a><br>
-                <a href="https://github.com/tytichenor/Finished-Projects/tree/main/Finished-Krusty">Krusty Menu<img src="content/forward-arrow.png" height="30" width="30"></a><br>
-                <a href="https://github.com/tytichenor/Finished-Projects/tree/main/Finished-Yoga">Yoga<img src="content/forward-arrow.png" height="30" width="30"></a>
+            <div class="slideshow-container">
+                <div class="mySlides">
+                    <img src="content/scCCF.png" alt="CCF">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scComboJava.png" alt="Combo Java">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scLunchBox.png" alt="LunchBox">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scMadLib.png" alt="Mad Lib">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scNavKiosk.png" alt="Nav Kiosk">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scPortfolio23.png" alt="Portfolio '23">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scPostcard.png" alt="Postcard">
+                </div>
+                <div class="mySlides">
+                    <img src="content/scVending.png" alt="Vending">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
-
-
-
+        <div class="container-3-project-picker">
+            <div class="text-2-project-picker">
+                <a href="https://github.com/tytichenor/projectShowcase">Project Files<img src="content/forward-arrow.png" height="30" width="30"></a><br>
+            </div>
+        </div>
+        <script>
+            let slideIndex = 1;
+            showSlides(slideIndex);
+            function plusSlides(n) {
+                showSlides(slideIndex += n);
+            }
+            function showSlides(n) {
+                let i;
+                let slides = document.getElementsByClassName("mySlides");
+                if (n > slides.length) { slideIndex = 1 }
+                if (n < 1) { slideIndex = slides.length }
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                slides[slideIndex - 1].style.display = "block";
+            }
+        </script>
         <footer class="footer">
             Ty Tichenor &copy; <div class="footer-link"><a href="mailto:tjtichenor14@gmail.com">tjtichenor14@gmail.com</a></div>
             <div class="footer-link"><a href="https://sictc.evscschools.com/">Southern Indiana Career & Technical Center</a></div><br>
             <img src="content/logo2.png" height="100" width="100"><br>
         </footer>
-  
-            <script src="index.js"></script>
       </body>
   </html>
